syntax = "proto3";

import "google/protobuf/timestamp.proto";

package v1.snapshot;

enum SnapshotStatus {
  Unknown = 0;
  Online  = 1;
}

message SnapshotState {
  string                         uuid = 1;
  SnapshotStatus               status = 2;
  // Creation timestamp of the snapshot.
  google.protobuf.Timestamp timestamp = 3;
  // Size of the snapshot (typically follows source size).
  uint64                         size = 4;
  string                    source_id = 5;
}

message ReplicaSnapshotState {
  string                         uuid = 1;
  SnapshotStatus               status = 2;
  // Creation timestamp of the snapshot.
  google.protobuf.Timestamp timestamp = 3;
  // Size of the snapshot (typically follows source size).
  uint64                         size = 4;
  // Runtime size taken by the snapshot.
  uint64              size_referenced = 5;
  string                    source_id = 6;
  /// Number of clones created from this snapshot.
  uint64                   num_clones = 7;
  // Transaction Id that defines this snapshot when it is created.
  string                       txn_id = 8;
  // Whether this replica snapshot is valid w.r.t all attributes.
  bool                          valid = 9;
}
